# explorer-tech-test

./: README.md
godot/: .gitignore  Main.tscn  README.md  icon.png.import  project.godot  rust.gdextension  rust.gdextension.uid
rust/: .gitignore  Cargo.toml  build-android.sh  build-wasm.sh  docker-build-android.sh
rust/.cargo/: config.toml
rust/comms/: Cargo.toml
rust/comms/src/: lib.rs
rust/runtime/: Cargo.toml
rust/runtime/src/: lib.rs
rust/src/: lib.rs  main_scene.rs
