[workspace]
members = ["comms", "runtime"]

[package]
name = "dclgodot"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local dependencies
comms = { path = "comms", optional = true }
runtime = { path = "runtime", optional = true }

# External dependencies
godot = { workspace = true }

[features]
default = ["use_comms"]
use_comms = ["comms"]
use_runtime = ["runtime"]
all = ["use_comms", "use_runtime"]

[workspace.dependencies]
godot = { version = "0.1.3", features=["experimental-threads", "serde"] }
tokio = { version = "1.40.0", features = ["full"] }
