[workspace]
members = ["comms", "runtime"]

[package]
name = "dclgodot"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local dependencies
comms = { path = "comms", optional = true }
runtime = { path = "runtime", optional = true }

# External dependencies
godot = { workspace = true }

[features]
default = ["use_comms"]
use_comms = ["comms"]
use_runtime = ["runtime"]
all = ["use_comms", "use_runtime"]

[workspace.dependencies]
godot = { git = "https://github.com/dclexplorer/gdext", rev ="4204285cdd32799690de28ee3a98ef624e95369e", features=["experimental-threads", "serde"] }
tokio = { version = "1.37.0", features = ["full"] }

[patch."https://github.com/godot-rust/godot4-prebuilt".godot4-prebuilt]
git = "https://github.com//godot-rust/godot4-prebuilt"
rev = "bc1e77856d181c14c59d2a5cb6a7e138ea5a2b39"
