[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.18"
tungstenite = "0.17"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
jsonwebtoken = "8.2"
chrono = "0.4"
livekit = { git = "https://github.com/robtfm/client-sdk-rust", branch="0.6-h264-false-2", features=["rustls-tls-webpki-roots"], optional = true }